# credito-extratos-app

./: .gitignore  Codex.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
arquivos_alterados_credito_extratos/src/: header_parser.py  utils.py
config/: banks.json  column_aliases.json  exclusion_terms_default.json
credito-extratos-app/: .gitignore  CHANGELOG.md  Executar Aplicativo.py  README.md  SECURITY.md  app.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_local.ps1
credito-extratos-app/.github/workflows/: ci.yml
credito-extratos-app/config/: column_aliases.json  exclusion_terms_default.json
credito-extratos-app/packaging/: LEIA-ME.txt  build_standalone.ps1  launcher.bat
credito-extratos-app/src/: __init__.py  analysis_engine.py  credit_classifier.py  exclusion_rules.py  export_excel.py  fx_processing.py  fx_ptax.py  header_parser.py  manual_overrides.py  monthly_summary.py  pdf_ocr.py  pdf_reader.py  pdf_report.py  table_extractor.py  transaction_parser.py  utils.py
credito-extratos-app/src/parsers/: __init__.py  banco_brasil.py  (+5 more)
credito-extratos-app/tests/: test_analysis_engine.py  test_classifier.py  test_header_parser.py  test_ocr_fallback.py  test_parser.py  test_pdf_reader.py  test_rules.py  test_ui_state.py  test_utils.py
src/: analysis_engine.py  exclusion_rules.py  export_excel.py  header_parser.py  logging_config.py  pdf_ocr.py  pdf_report.py  table_extractor.py  ui_state.py  utils.py
src/parsers/: __init__.py  bradesco.py  c6.py  cora.py  eagle.py  generic_text.py  inter.py  itau_mensal.py  santander.py  wise.py  xp.py
tests/: test_analysis_engine.py  test_exports.py  test_fx_processing.py  test_header_parser.py  test_manual_overrides.py  test_parser.py  test_summary.py
