[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credito-extratos"
version = "1.0.0"
description = "Analise de renda/credito a partir de extratos bancarios em PDF (uso interno)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Pedro Lopes", email = "Pedro.Lopes@rjzcyrela.com.br" }
]
dependencies = [
    "streamlit>=1.43.0",
    "pdfplumber>=0.11.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.9.0",
    "Unidecode>=1.3.8",
    "python-dateutil>=2.9.0",
    "numpy>=2.0.0",
    "PyMuPDF>=1.24.0",
    "rapidocr-onnxruntime>=1.3.24",
    "fpdf2>=2.7.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
packages = ["src", "src.parsers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "samples",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (intentional in some helpers)
    "RUF001", # ambiguous unicode (Portuguese text has acentos)
    "RUF002", # ambiguous unicode in docstring
    "RUF003", # ambiguous unicode in comment
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"app.py" = ["E402"]  # imports after configure_logging() is intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
